# Multi-Robot-Exploration-and-Map-Merging

./: CMakeLists.txt  README.md  package.xml
config/: FE.rviz  global_costmap_params_tb3_1.yaml  local_costmap_params_tb3_1.yaml  single_tb_FE.rviz  two_tb.rviz
launch/: modified_move_base.launch  multi_robot_map_merge.launch  one_tb3_1.launch  one_tb_FE.launch  one_tb_IRL.launch  single_tb_FE.launch  slam_online_synch.launch  spawn_robots.launch  tb3_0.launch  tb3_1.launch  two_tb_exploration.launch
multi_robot_exploration/: CMakeLists.txt
multi_robot_exploration/config/: global_costmap_params_tb3_0.yaml  global_costmap_params_tb3_1.yaml  local_costmap_params_tb3_0.yaml  mapper_params_localization.yaml  two_tb.rviz
multi_robot_exploration/launch/: modified_move_base.launch  multi_robot_map_merge.launch  one_tb_FE.launch  slam_online_synch.launch  spawn_robots.launch  two_tb_slam.launch
multi_robot_exploration/src/: exploradora0.cpp  map_expansion.cpp  map_metadata.cpp  one_tb_FE_func.cpp  tb3_1_FE_updated.cpp
multi_robot_exploration/srv/: tb3_0_start.srv
multi_robot_exploration/urdf/: oof.urdf.xacro  tb3_0.gazebo.xacro  tb3_0.urdf.xacro  turtlebot3_burger.gazebo.xacro
multi_turtlebot_slam/: CMakeLists.txt  package.xml
multi_turtlebot_slam/config/: FE.rviz  global_costmap_params_tb3_0.yaml  global_costmap_params_tb3_1.yaml  mapper_params_online_sync.yaml  two_tb.rviz
multi_turtlebot_slam/launch/: 0start_slam.launch  0two_tb_slam.launch  all_together.launch  frontier_ex.launch  frontier_exploration.launch  kailey_amcl.launch  kailey_localization.launch  kailey_map_merge.launch  kailey_move_base.launch  kailey_multi_tb.launch  kailey_multi_turtle_slam.launch  kailey_online_synch.launch  multi_nav.launch  one_tb3_0.launch  one_tb3_1.launch  one_tb_FE.launch  one_tb_IRL.launch  oof.launch  robots.launch  robots_old.launch  sim.launch  tb3_0_gmapping.launch  tb3_1_gmapping.launch  turtlebot3.launch  two_tb_FE.launch  two_tb_gaz.launch  two_tb_slam.launch
multi_turtlebot_slam/maps/: map.pgm
multi_turtlebot_slam/src/: edge_explore.cpp  edge_explore2.cpp  explore_frontiers.cpp  explore_frontiers2.cpp  frontier_nav.cpp  init_pose.cpp  map_expansion.cpp  map_metadata.cpp  one_tb_FE_func.cpp  one_tb_FE_improved.cpp  tb3_0_FE.cpp  tb3_0_FE_func.cpp  tb3_0_FE_updated.cpp  tb3_1_FE.cpp  tb3_1_FE_updated.cpp
multi_turtlebot_slam/urdf/: tb3_0.gazebo.xacro  tb3_0.urdf.xacro  tb3_1.gazebo.xacro  (+1 more)
src/: exploradora1.cpp  map_expansion.cpp  one_tb_FE.cpp  one_tb_FE_improved.cpp  single_tb_FE.cpp  tb3_0_FE.cpp  tb3_0_FE_updated.cpp  tb3_1_FE.cpp
urdf/: oof.gazebo.xacro  tb3_0.urdf.xacro  tb3_1.urdf.xacro  turtlebot3_burger.urdf.xacro
