<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_exploration</name>
  <version>1.0.1</version>
  <description>Use Frontier Exploration on two turtlebots to map a space and the multirobot_map_merge to combine the local maps into one mergered map</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="kaileysmith2021@u.northwestern.edu">Kailey Smith</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <!-- <exec_depend>amcl</exec_depend> -->
  <exec_depend>rviz</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <!-- <exec_depend>gmapping</exec_depend> -->
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>multirobot_map_merge</exec_depend>
  <!-- <exec_depend>multi_turtlebot_slam</exec_depend> -->
  <depend>roscpp</depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_depend>actionlib</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_depend>message_runtime</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend> 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
